added swagger documentation, added login button in footer, added new api route that computes file hash and then rediredcts
